--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
                                 <h2 data-animation="bounceInDown" data-delay="900ms">Tshuks Media</h2>
                                 <p data-animation="bounceInDown" data-delay="500ms">Where Dreams Come True...</p>
                                 <div class="hero-btn-group" data-animation="bounceInDown" data-delay="100ms">
-                                    <a href="mailto:sales@tshuksmedia.co.zw" class="btn alime-btn mb-3 mb-sm-0 mr-4">Get a Quote</a>
-                                    <a class="hero-mail-contact" href="mailto:sales@tshuksmedia.co.zw">sales@tshuksmedia.co.zw</a>
+                                    <a href="mailto:tshuksmedia@gmail.com" class="btn alime-btn mb-3 mb-sm-0 mr-4">Get a Quote</a>
+                                    <a class="hero-mail-contact" href="mailto:tshuksmedia@gmail.com">tshuksmedia@gmail.com</a>
                                 </div>
                             </div>
                         </div>
@@ -122,13 +122,28 @@
                                 <h2 data-animation="bounceInUp" data-delay="100ms">We <br>Change Your World</h2>
                                 <p data-animation="bounceInUp" data-delay="500ms">Excellence is our life blood, We can make it yours too.</p>
                                 <div class="hero-btn-group" data-animation="bounceInUp" data-delay="900ms">
-                                    <a href="mailto:sales@tshuksmedia.co.zw" class="btn alime-btn mb-3 mb-sm-0 mr-4">Get a Quote</a>
-                                    <a class="hero-mail-contact" href="mailto:sales@tshuksmedia.co.zw">sales@tshuksmedia.co.zw</a>
+                                    <a href="mailto:tshuksmedia@gmail.com" class="btn alime-btn mb-3 mb-sm-0 mr-4">Get a Quote</a>
+                                    <a class="hero-mail-contact" href="mailto:tshuksmedia@gmail.com">tshuksmedia@gmail.com</a>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
+            </div>
+            <div class="single-welcome-slide bg-img bg-overlay" style="background-image: url(img/bg-img/2.jpg);">
+                <div class="grid">
+                    <div class="grid-item1"></div>
+                    <div class="grid-item2"></div>
+                    <div class="grid-item3"></div>
+                    <div class="grid-item4"></div>
+                    <div class="grid-item5"></div>
+                    <div class="grid-item6"></div>
+                    <div class="grid-item7"></div>
+                    <div class="grid-item8"></div>
+                </div>
+            </div>
+            <div class="single-welcome-slide bg-img bg-overlay" style="background-image: url(img/bg-img/2.jpg);">
+                
             </div>
         </div>
     </section>
@@ -369,12 +384,14 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
                             <a href="#"><img src="img/core-img/logo2.png" alt=""></a>
                         </div>
                         <!-- Social Info -->
-                        <div class="social-info">
-                            <a href="#"><i class="ti-facebook" aria-hidden="true"></i></a>
-                            <a href="#"><i class="ti-twitter-alt" aria-hidden="true"></i></a>
-                            <a href="#"><i class="ti-linkedin" aria-hidden="true"></i></a>
-                            <a href="#"><i class="ti-pinterest" aria-hidden="true"></i></a>
-                        </div>
+                    <div class="social-info">
+                        <a href="https://instagram.com/tshuks.media.zw?igshid=OGQ5ZDc2ODk2ZA=="><i class="ti-instagram"
+                                aria-hidden="true"></i></a>
+                        <a href="https://twitter.com/tshuks_media_zw?s=11&t=U2NA9WE1jhxSFelfBTlZ4g"><i class="ti-twitter-alt"
+                                aria-hidden="true"></i></a>
+                    
+                        <a href="https://pin.it/6WiB9Sp"><i class="ti-pinterest" aria-hidden="true"></i></a>
+                    </div>
                     </div>
                 </div>
             </div>
