--- a/gallery.html
+++ b/gallery.html
@@ -360,10 +360,12 @@
                         </div>
                         <!-- Social Info -->
                         <div class="social-info">
-                            <a href="#"><i class="ti-facebook" aria-hidden="true"></i></a>
-                            <a href="#"><i class="ti-twitter-alt" aria-hidden="true"></i></a>
-                            <a href="#"><i class="ti-linkedin" aria-hidden="true"></i></a>
-                            <a href="#"><i class="ti-pinterest" aria-hidden="true"></i></a>
+                            <a href="https://instagram.com/tshuks.media.zw?igshid=OGQ5ZDc2ODk2ZA=="><i class="ti-instagram"
+                                    aria-hidden="true"></i></a>
+                            <a href="https://twitter.com/tshuks_media_zw?s=11&t=U2NA9WE1jhxSFelfBTlZ4g"><i class="ti-twitter-alt"
+                                    aria-hidden="true"></i></a>
+                        
+                            <a href="https://pin.it/6WiB9Sp"><i class="ti-pinterest" aria-hidden="true"></i></a>
                         </div>
                     </div>
                 </div>
